--- a/style.css
+++ b/style.css
@@ -1,42 +1,63 @@
-:root{
---branco-principal:#FFFFFF;
---cinza-secundario:#c0c0c0;
---botao-azul:#167bf7;
---cor-de-fundo:#00030c;
+:root {
 
-
-}
-body{
-
+    --branco-principal:#FFFFFF;
+    --cinza-secundrio:#C0C0C0;
+    --botao-azul:#167bf7;
+    --cor-de-fundo:#00030C;
+    
+    }
+    
+    body{
+    
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
-}
-
-{
-
-    margin: 0 ;
-    padding: 0 ;
-}
-
-.principal{
-
-    background-image: url(Background\ \(2\).png);
+    
+    }
+    
+    *{
+    margin: 0;
+    padding: 0;
+    
+    }
+    
+    .principal{
+    
+    background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: contain;
-}
-.container{
-
+    
+    }
+    
+    .container{
+    
     height: 100vh;
-}
-
-.conteiner-botao{
-
+    display: grid;
+    grid-template-columns: 50% 50%;
+    
+    }
+    
+    .container-botao{
+    
     background-color: var(--botao-azul);
-    border-radius: 5px ;
-    padding: lem;
+    border-radius: 5px;
+    padding: 1em;
     color: var(--branco-principal);
     display: block;
-
-
-
-}
+    text-decoration: none;
+    
+    }
+    
+    .botao-secundario {
+    
+    background-color: transparent;
+    border: 2px solid;
+    
+    }
+    
+    .container-aviso{
+    
+    font-size: 12px;
+    color: var(--cinza-secundrio);
+    
+    }
+    
