--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --cinza-secundrio:#C0C0C0;
     --botao-azul:#167bf7;
     --cor-de-fundo:#00030C;
+    --fonte-principal:"inter"
     
     }
     
@@ -11,6 +12,9 @@
     
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
     
     }
     
@@ -22,9 +26,12 @@
     
     .principal{
     
-    background-image: url("Background.png");
+    background-image: url("Background\ \(2\).png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
+
     
     }
     
@@ -59,5 +66,50 @@
     font-size: 12px;
     color: var(--cinza-secundrio);
     
+    }
+
+    .container-titulo{
+
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+    .container-imagem{
+
+        margin: 1em 0 2em 0;
+    }
+
+    .container-botao{
+
+        margin-bottom: 1em;
+    }
+
+    .container-caixa{
+
+        margin: 0 6em;
+    }
+
+    .secundario-imagem{
+
+        width: 60%;
+    }
+
+    .descrisao-titulo{
+
+        font-weight: 700;
+        font-size: 48px;
+        color: var(--branco-principal);
+        margin-bottom: 0.1em;
+    }
+
+    .descrisao-texto{
+
+        color: var(--cinza-secundrio);
+    }
+
+    .secundario{
+
+        align-items: center;
+        margin: 0 10em;
     }
     
