--- a/style.css
+++ b/style.css
@@ -1,164 +1,151 @@
-:root {
+:root{
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167bf7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal:'Inter';
+    --botao-azul-efeito:#3c92fa;
+}
 
-    --branco-principal:#FFFFFF;
-    --cinza-secundrio:#C0C0C0;
-    --botao-azul:#167bf7;
-    --cor-de-fundo:#00030C;
-    --fonte-principal:"inter"
-    
-    }
-    
-    body{
-    
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
-    
-    }
-    
-    *{
+body{
+background-color: var(--cor-de-fundo);
+color: var(--branco-principal);
+font-family: var(--fonte-principal);
+font-size: 16px;
+font-weight: 400;
+}
+
+*{
     margin: 0;
     padding: 0;
-    
-    }
-    
-    .principal{
-    
-    background-image: url("Background\ \(2\).png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    align-items: center;
-    text-align: center;
+}
 
-    
-    }
-    
-    .container{
-    
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    
-    }
-    
-    .container-botao{
-    
-    background-color: var(--botao-azul);
-    border-radius: 5px;
-    padding: 1em;
+.principal{
+background-image: url("Background\ \(2\).png");
+background-repeat: no-repeat;
+background-size: contain;
+align-items: center;
+text-align: center;
+}
+
+.container{
+height: 100vh;
+display: grid;
+grid-template-columns: 50% 50%;
+}
+
+.container-botao{
+background-color: var(--botao-azul);
+border-radius: 5px;
+padding: 1em;
+color: var(--branco-principal);
+display: block;
+text-decoration: none;
+}
+
+.botao-secundario{
+background-color: transparent;
+border: 2px solid;
+}
+ .container-aviso{
+font-size: 12px;
+color: var(--cinza-secundario);
+}
+
+ .container-titulo{
+font-size: 28px;
+font-weight: 700;
+}
+
+ .container-imagem{
+margin: 1em 0 2em 0;
+}
+
+.container-botao{
+margin-bottom: 1em;
+}
+
+.container-caixa{
+margin: 0 6em;
+}
+ .secundario-imagem{
+width: 80%;
+
+ }
+.descrição-titulo{
+font-weight: 700;
+font-size: 48px;
+color: var(--branco-principal);
+margin-bottom: 0.1em;
+}
+.descrição-texto{
+    color: var(--cinza-secundario);
+
+}
+.secundario{
+align-items: center;
+margin: 0 10em;
+
+}
+
+.secundario-botao{
+display: inline-block;
+margin-top: 1em;
+
+
+}
+.container-descrição{
+padding: 2em;
+
+}
+.dispositivo-lista{
+    display: flex;
+justify-content: center;
+list-style-type: none;
+margin: 5em 0;
+
+}
+.dispositivos{
+text-align: center;
+
+}
+.dispositivo-titulo{
+font-size: 48px;
+color: var(--branco-principal);
+
+}
+.lista-item{
+    font-size: 32px;
     color: var(--branco-principal);
-    display: block;
-    text-decoration: none;
-    
-    }
-    
-    .botao-secundario {
-    
-    background-color: transparent;
-    border: 2px solid;
-    
-    }
-    
-    .container-aviso{
-    
-    font-size: 12px;
-    color: var(--cinza-secundrio);
-    
-    }
-
-    .container-titulo{
-
-        font-size: 20px;
-        font-weight: 700;
-    }
-
-    .container-imagem{
-
-        margin: 1em 0 2em 0;
-    }
-
-    .container-botao{
-
-        margin-bottom: 1em;
-    }
-
-    .container-caixa{
-
-        margin: 0 6em;
-    }
-
-    .secundario-imagem{
-
-        width: 80%;
-    }
-
-    .descriçao-titulo{
-
-        font-weight: 700;
-        font-size: 48px;
-        color: var(--branco-principal);
-        margin-bottom: 0.1em;
-    }
-
-    .descriçao-texto{
-
-        color: var(--cinza-secundrio);
-    }
-
-    .secundario{
-
-        align-items: center;
-        margin: 0 10em;
-    }
-
-    .secundario-botao{
-
-        display:inline-block;
-        margin-top: 1em;
-    }
-
-    .container-decriçao{
-        padding: 2em;
-    }
-
-    .dispositivo__lista{
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        margin: 5em 0;
-    }
-
-    .dispositivos{
-        text-align: center;
-    }
-
-    .dispositivos__titulos{
-        font-size: 48px;
-        color:var(--branco-principal);
-    }
-
-    .lista__item{
-        font-size: 32px;
-        color: var(--branco-principal);
-    }
-
-    .rodape{
-        text-align: center;
-        margin: 5em 3em;
-    }
-
-    .rodape__lista{
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-       margin-top: 1em;
-    }
-
-    .rodape__texto{
-        margin: 1em 0;
-        color: var(--cinza-secundrio);
-        font-size: 14px;
-    }
-    
+}
+.rodape{
+text-align: center;
+margin: 5em 3em;
+}
+.rodape-lista{
+display: flex;
+justify-content: center;
+list-style-type: none;
+margin-top: 1em;
+}
+.rodape-texto{
+margin: 1em 0;
+color: var(--cinza-secundario);
+font-size: 14px;
+}
+.lista-link a{
+text-decoration: none;
+color: var(--branco-principal);
+font-size: 14px;
+margin: 1em;
+}
+.lista-link a:hover{
+    color: var(--botao-azul);
+}
+.lista-link a:active{
+    color: purple;
+}
+.container-botao:hover{
+background-color: var(--botao-azul-efeito);
+color: var(--cor-de-fundo);
+}
